<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulario">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@color/negro"
                android:text="@string/formulario"
                android:textColor="@color/morado"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/edt_nombre"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nombre"
                />
            <EditText
                android:id="@+id/edt_apellido"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/apellidos"/>
            <EditText
                android:id="@+id/direccion"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/direccion"/>
            <EditText
                android:id="@+id/dni"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:hint="@string/dni"/>
            <EditText
                android:id="@+id/correo"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"/>
            <EditText
                android:id="@+id/movil"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/movil"/>
            <EditText
                android:id="@+id/cui"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/cui"/>
            <EditText
                android:id="@+id/nacimiento"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nacimiento"/>

            <RadioGroup
                android:id="@+id/genero"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femenino"
                    ></RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    ></RadioButton>
                ></LinearLayout>
            </RadioGroup>

            <CheckBox
                android:id="@+id/condicion"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/condición"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                />



        </LinearLayout>


    </LinearLayout>

    </RelativeLayout>